<resources>
    <string name="app_name">Trabalho A2</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Bike Loans</string>
    <string name="nav_header_subtitle">atendimento@bikeloans.com.br</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Página Inicial</string>
    <string name="menu_cadastro">Cadastro de Clientes</string>
    <string name="menu_historico_alugueis">Histórico de Aluguéis</string>
    <string name="menu_reservas">Reservas</string>
    <string name="menu_programa_milhagem">Programa de Milhagem</string>
    <string name="menu_missao">Missão</string>
    <string name="menu_sobre">Sobre</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Texto Default</string>
</resources>